discussion/kv_engine/155194/155194_rev14_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46729: Use the global executor from the core [WIP]

Move the tasks over to use the global executor

Change-Id: I33cd997a2a79544ab799af9321ca4a8cb208c711

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-09 10:48:41.000000000
Message: 
Uploaded patch set 14.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-09 11:36:56.000000000
Message: 
Patch Set 14: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11659/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19244/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19244/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9663/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/tasks.def.h:25:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/tasks.def.h:25:6: error: use of undeclared identifier "MultiBGFetcherTask" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/tasks.def.h:25:26: error: use of undeclared identifier "READER_TASK_IDX" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/tasks.def.h:25:45: error: expected ";" after top level declarator [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                                            ^
                                            ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9663/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/tasks.def.h:25:1:
error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9663/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36626/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36626/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8261/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31299/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10312/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11240/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11388/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
